Closed Bug 106756 Opened 23 years ago Closed 23 years ago

alignment problems in Directory Viewer

Categories

(SeaMonkey :: UI Design, defect, P1)

x86
Linux

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: bulbul, Assigned: bbaetz)

References

()

Details

(Keywords: polish)

Attachments

(3 files, 1 obsolete file)

In a current ftp directory view, the filename is not correctly aligned 
with other file info (such as file size and date). I think that this could be 
easily fixed by using <td valign="bottom"> instead of simply <td>. 
I will attach a file demonstrating the current html and the proposed solution.
Sorry i forgot to say which build that was, though it must have been a Linux
trunk build from around Oct 24. Now i see that the html is no longer like the
html output i show in attachment 55017 [details] [diff] [review], which uses table columns. I surmise,
then, that this is a XUL directory problem. If this is so, i think the problem
would be fixed by adding an "align" attribute to the treecell elements in
directory.xul.
-> default assignee
Assignee: pchen → trudelle
Status: UNCONFIRMED → NEW
->bbaetz
Assignee: trudelle → bbaetz
Status: NEW → UNCONFIRMED
The html view has been rewritten since this was filed. I'm not sure if this bug
is still relevent - can you please try this out on a current build?

I think it may still be appropriate, but I'm not really sure.

Comments?
Yes, the problem is still there. Just go to 

<ftp://ftp.mozilla.org/pub/mozilla/nightly> 

and look at the result. (The misalignment is easiest to see if you scroll to a
line with a particularly long directory name.)

I don't understand why this bug was demoted from NEW to UNCONFIRMED. This bug is
easy to verify. Could we please promote it back to NEW? I'll look at the new
html code generated to see if my suggested fix is still appropriate.
Sorry sorry sorry. I spoke too soon. The alignment isn't perfect, but it's much
better than when i first filed the bug.

I don't like the way that the file icon image descends below the text of the
filename. This could be fixed by giving the img tag the attribute
align="Absbottom" and by giving each of the td tags the attribute
valign="bottom". I'll attach a new file with the current formatting and my
proposal for a fix. But i must say that now the alignment issue is very minor,
not like when i first filed.
This file shows how the incorrect alignment between the icons and the text
could be easily fixed. 

I tried to obsolete my original attachment, but i'm not authorized to do so.

Could someone please tell me what file produces this html code?
Bugs aren't meant to go from NEW to UNCONFIRMED, ever. That probably happened as
part of the mass move of pchen's bugs. I think that there is a bug on that.

I'll cook up a patch this weekend.

Thanks.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Setting milestone so I can find this again
Priority: -- → P1
Target Milestone: --- → mozilla0.9.9
Attached patch patch (obsolete) — Splinter Review
OK, try this
The patch isn't quite right, since the other table cells are then misaligned. I
need to see if theres a better way to do this. This won't land before tree
closure, but I may get it in before the branch
Keywords: polish
Attached patch v2Splinter Review
OK, this works better.
Attachment #69910 - Attachment is obsolete: true
r=basic on v2 if you remove:
+    printf("nsFTPDirListingConv::OnStartRequest\n");

Yeah, ignore that file- that was from debugging some stuff earlier today.
Comment on attachment 70858 [details] [diff] [review]
v2

sr=sfraser
Attachment #70858 - Flags: superreview+
looks good to me. a=asa (on behalf of drivers) for checkin to 0.9.9
Keywords: mozilla0.9.9+
Checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Just some observations:

The FTP directory listing page claims to be HTML 3.2 in its' DOCTYPE. The newly
added ABSBOTTOM value of the ALIGN attribute of the IMG element is not valid
HTML 3.2.

AFAIK, the ABSBOTTOM value for the ALIGN attribute has never been valid W3C
HTML, but is a Netscape extension. See for example explanation at
http://validator.w3.org/docs/errors.html#undef-attr-val

I am surprised how this page is still maintained as HTML 3.2. Wouldn't it be
nicer and clearer to get rid of all the things that are deprecated in HTML 4.01
Strict (such as BORDER, ALIGN and HSPACE), convert the page to HTML 4.01 Strict
(or even XHTML), and generate all the stylistic effects with some nice CSS?
Yeah, theres a separate bug on doing that.
bbaetz: which bug is that? I'd like to take a look.
Bug 77969 is probably the one to morph. Remember that this isn't chrome, so
you're restricted to webpage js, and js may be disabled, too, so it can't be
required (That may change when about:plugins can beused w/o js, since we can use
teh same mechanism, I'd guess) You can access a resource:// stylesheet, though,
so you can do some theming.
vrfy'd fixed using 2002.06.17.0x branch comm bits on linux rh7, win2k and mac
10.1.5.
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: