Bug 106756 - fix vertical alignment for html directory viewer r=basic, sr=sfraser, a=asa